--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
-  "name": "reacqtt",
+  "name": "mqtt-react-hook",
   "private": false,
   "description": "React hooks for utilizing MQTT",
   "author": "Sina Sadjadi <sinasadjadi@proton.me>",
   "license": "MIT",
-  "homepage": "https://github.com/sinasadjadi/reacqtt",
-  "repository": "https://github.com/sinasadjadi/reacqtt",
+  "homepage": "https://github.com/sinasadjadi/mqtt-react-hook",
+  "repository": "https://github.com/sinasadjadi/mqtt-react-hook",
   "version": "0.0.1",
+  "keywords": [
+    "mqtt",
+    "react",
+    "react + mqtt",
+    "typescript",
+    "mqtt.js",
+    "mqtt-pattern",
+    "react-hooks",
+    "mqtt-hooks",
+    "mqtt-react-hook"
+  ],
   "type": "module",
   "main": "lib/index.umd.js",
   "module": "lib/index.es.js",
